advanced flags are useless in most case